fixed noLink being the wrong color

--- a/YouriPortfolio/YouriPortfolio/Content/Site.css
+++ b/YouriPortfolio/YouriPortfolio/Content/Site.css
@@ -13,7 +13,7 @@
 
 .noLink {
     text-decoration: none;
-    color: black;
+    color: #333;
 }
 
 h1 {
